src/test/deca/context/invalid/homeMade/tests/test329_condition/test329_condition1.deca
// test invalide de la règle 3.29


{
    if ("toto") {
        ;
    }
}
